# ai-atc-demo

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
backend/: __init__.py  agent.py  health.py  main.py  sessions.py
frontend/: package-lock.json  package.json
frontend/src/lib/: config.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/live/: +page.svelte
frontend/src/routes/replay/[id]/: +page.svelte
frontend/src/routes/sessions/: +page.svelte
