[project]
name = "ai-atc-demo"
version = "0.1.0"
description = "Demo interface for AI ATC agent"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]  # Include current dir as this is a standalone script
